@@ -1,5 +1,15 @@
 2005-10-11  Vincent Noel  <vnoel@cox.net>
 
+	* log_repaint.c (logview_draw_log_lines): Avoid massive slowdown
+	when the log doesn't have dates.
+
+2005-10-11  Vincent Noel  <vnoel@cox.net>
+
+	* logview.c (logview_add_logs_from_names): Show a progress bar
+	when loading logs at startup.
+
+2005-10-11  Vincent Noel  <vnoel@cox.net>
+
 	* logview.c (logview_add_logs_from_names): Try to open the main
 	window as soon as possible.
 
